<resources>

    <string name="phone_valid_intro">Safe Doktor will send a one time SMS message to verify your phone number</string>
    <string name="phone_enter_explain">Please confirm your country code and enter your phone number</string>

    <string name="default_info_title">Default Location</string>
    <string name="default_info_snippet">No places found, because location permission is disabled.</string>
    <string name="option_get_place">Get place</string>
    <string name="pick_place">Choose a place</string>

    <!-- Old project -->

    <string name="app_name">SafeDoktor</string>
    <string name="title_activity_post_detail">Post Details</string>

    <!--Navigation Menu-->
    <string name="appointments_txt">Appointments</string>
    <string name="services_txt">Services</string>
    <string name="health_posts_txt">Health Library</string>
    <string name="medical_records_txt">MEDICAL RECORDS</string>
    <string name="clinic_visit_medical_records_txt">Clinic Visits</string>
    <string name="online_medical_records_txt">Online Visits</string>
    <string name="first_aid_txt">First Aid</string>
    <string name="reminder_txt">Reminders</string>
    <string name="referral_txt">Referrals</string>
    <string name="chat_txt">Consultation</string>
    <string name="bio_data_txt">Profile</string>

    <!--Stephen's Additions-->
    <string name="lbl_community">COMMUNITY</string>
    <string name="lbl_chatroom">Chat Room</string>
    <string name="lbl_socialmedia">Social Media</string>
    <string name="lbl_partners">PARTNERS</string>
    <string name="lbl_hospitals">Hospitals</string>
    <string name="lbl_pharmacies">Pharmacies</string>
    <string name="lbl_diagnostic">Diagnostic Centers</string>
    <string name="lbl_specialists">Specialists</string>


    <!--Views-->
    <string name="no_internet_connection_txt">No Internet Connection</string>
    <string name="settings_txt">Settings</string>
    <string name="login_username_hint">Username</string>
    <string name="login_password_hint">Password</string>
    <string name="log_in_btn_text">Log in</string>
    <string name="navigate_to_signup_text">Register With Us!</string>
    <string name="username">Username</string>

    <!-- Strings related to login -->

    <!--credentials for swagger-->

    <string name="title_activity_aid_detail">AidDetail</string>

    <string name="privacy_policy"><u>Terms of use and Privacy</u></string>

    <string name="policy_url">https://safedoktor.com/index.php/privacy-policy/</string>


    <string name="appointment_date_txt">Date:</string>
    <string name="assigned_doctor_txt">Assigned Doctor</string>
    <string name="chat_type">Consultation Type</string>
    <string name="mobile_money_type">Mobile Money Type</string>
    <string name="service_fee">Service Fee</string>
    <string name="action_view_profile">View Profile</string>
    <string name="action_book">Book</string>
    <string name="alert_working">Working... Please wait</string>
    <string name="alert_actionnotcompleted">Could not complete action. Please try again later</string>
    <string name="alert_networkissues">Network error, please try again</string>
    <string name="alert_already_registered">This phone number has already registered on Safe Doktor. Please log in</string>
    <string name="alert_already_validated">This phone number has already been validated on Safe Doktor.</string>
    <string name="added_favorites_txt">Added to Favorites</string>
    <string name="to_do">TO DO</string>
    <string name="information_txt">INFORMATION</string>
    <string name="select_country">Select Country</string>
    <string name="phonenumber">Phone number</string>
    <string name="user_phonenumber">Number</string>
    <string name="verification_message">Enter the 6-digit code sent to </string>
    <string name="resend_code_message">Resend Code</string>
    <string name="login_firstname_hint">Firstname</string>
    <string name="login_lastname_hint">Lastname</string>
    <string name="login_confirm_password_hint">Confirm Password</string>
    <string name="bloodgroup_hint">Blood Group</string>
    <string name="allegies_hint">Allegies</string>
    <string name="medication_hint">Current Medications</string>
    <string name="donor_message_hint">Are you a blood donor?</string>
    <string name="next_of_kins_hint">Next Of Kins</string>
    <string name="contact_persons_hint">Contact Persons</string>
    <string name="next_btn_text">Done</string>

    <string name="chat_empty_msg_error">Please enter message</string>
    <string name="consultation">Consultation</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="service_type_txt">Sevice Type</string>
    <string name="book_appointment">Book Appointment</string>
    <string name="paydrug">Make Payment</string>

    <string name="available_service">Available service</string>

    <string name="no_doc_available">No doctor available</string>
    <string name="enter_code">Enter code</string>

    <string name="no_appointments_yet">No appointments yet</string>
    <string name="title_activity_profile2">Profile2</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_appointment">AppointmentActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>


    <string name="facebook">https://www.facebook.com/SafedoKtorgh/</string>
    <string name="twitter">https://twitter.com/SafeDoktor</string>
    <string name="instagram">https://www.instagram.com/safedoktor/</string>

    <string name="vitalstatistics_txt">Vital Statistics</string>


</resources>
