<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/safe_doctor_bg2"
        android:scaleType="centerCrop"
        />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:orientation="vertical"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin">


                <Spinner
                    android:id="@+id/signupBloodGroup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edittext_all_bg"
                    android:hint="@string/bloodgroup_hint"
                    android:inputType="textAutoComplete"
                    android:padding="20dp"
                    android:textColorHint="#cccccc" />

                <Spinner
                    android:id="@+id/signupAllegies"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/edittext_all_bg"
                    android:hint="@string/allegies_hint"
                    android:inputType="textAutoComplete"
                    android:padding="20dp"
                    android:textColorHint="#cccccc" />
                <Spinner
                    android:id="@+id/signupMedication"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/edittext_all_bg"
                    android:hint="@string/medication_hint"
                    android:inputType="textAutoComplete"
                    android:padding="20dp"
                    android:textColorHint="#cccccc" />
                <TextureView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/donor_message_hint"
                    android:textColorHint="@color/textDarkColor" />

                <EditText
                    android:id="@+id/signupNextofKins"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/edittext_all_bg"
                    android:hint="@string/next_of_kins_hint"
                    android:inputType="text"
                    android:padding="40dp"
                    android:textColorHint="#cccccc" />

                 <EditText
                    android:id="@+id/signupContactPersons"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/edittext_all_bg"
                    android:hint="@string/contact_persons_hint"
                    android:inputType="text"
                    android:padding="40dp"
                    android:textColorHint="#cccccc" />

                <Button
                    android:id="@+id/signupBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:height="40dp"
                    android:gravity="right"
                    android:background="@drawable/edittext_all_bg"
                    android:text="@string/next_btn_text"
                    android:textAllCaps="false"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="20sp" />
            </LinearLayout>




        </LinearLayout>

    </ScrollView>



</RelativeLayout>