<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.safedoctor.safedoctor.UI.Activities.Enter_Verification_Code">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary">

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="match_parent"
            android:layout_height="105dp"
            android:layout_gravity="center_horizontal"
            android:layout_margin="20dp"
            android:src="@mipmap/ic_launcher" />

        <LinearLayout
            android:id="@+id/message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="200dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="84dp"
                android:paddingEnd="8dp"
                android:paddingLeft="20dp"
                android:paddingStart="8dp"
                android:paddingTop="30dp"

                android:shadowColor="@color/textshadow"
                android:shadowDx="3"
                android:shadowDy="3"
                android:shadowRadius="8"
                android:text="@string/verification_message"
                android:textColor="@color/lightfont"
                android:textSize="18sp" />

            <TextView

                android:id="@+id/user_phonenumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:shadowColor="@color/textshadow"
                android:shadowDx="3"
                android:shadowDy="3"
                android:shadowRadius="8"
                android:text="@string/user_phonenumber"
                android:textColor="@color/lightfont"
                android:textSize="18sp"
                android:textStyle="bold" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/code_layout"
            android:layout_width="match_parent"
            android:layout_height="83dp"
            android:layout_alignBottom="@+id/linearLayout"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="62dp"
            android:gravity="center"
            android:orientation="horizontal">


            <EditText
                android:id="@+id/validation_code"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text_bg"
                android:hint="@string/enter_code"
                android:padding="20dp"
                android:textAlignment="center"
                android:textSize="16sp"                />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/message"
            android:layout_marginTop="42dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/resend_code"
                android:layout_width="wrap_content"
                android:layout_height="84dp"
                android:layout_gravity="center_horizontal"
                android:clickable="true"
                android:paddingLeft="20dp"
                android:paddingRight="10dp"
                android:paddingTop="30dp"
                android:shadowColor="@color/textshadow"
                android:shadowDx="3"
                android:shadowDy="3"
                android:shadowRadius="8"
                android:text="@string/resend_code_message"
                android:textColor="@color/lightfont"
                android:textSize="18sp" />


        </LinearLayout>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_gravity="bottom|end"
            android:layout_margin="16dp"
            android:tint="@android:color/white"
            app:fabSize="normal"
            app:layout_anchorGravity="bottom|end"
            app:srcCompat="@drawable/ic_next" />
    </RelativeLayout>


</android.support.design.widget.CoordinatorLayout>