<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/safe_doctor_bg2"
                tools:context="com.safedoctor.safedoctor.UI.Activities.Login">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:scaleType="centerCrop"
        android:src="@drawable/safe_doctor_bg2"/>
    
   <ScrollView
       android:layout_width="match_parent"
       android:layout_height="match_parent"

       >

       <RelativeLayout
           android:layout_width="match_parent"
           android:layout_height="match_parent"

           >

           <ImageView

               android:id="@+id/imageView1"
               android:layout_width="105dp"
               android:layout_height="105dp"
               android:layout_centerHorizontal="true"
               android:layout_marginBottom="60dp"
             android:layout_marginTop="60dp"
               android:src="@mipmap/ic_launcher"
               />



           <LinearLayout
               android:id="@+id/login_details_layout"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_below="@+id/imageView1"
               android:orientation="vertical"
               android:paddingBottom="@dimen/activity_vertical_margin"
               android:paddingLeft="@dimen/activity_horizontal_margin"
               android:paddingRight="@dimen/activity_horizontal_margin"
               android:paddingTop="@dimen/activity_vertical_margin"

               >


               <EditText
                   android:id="@+id/signinEmail"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:background="@drawable/edittext_top_bg"
                   android:hint="@string/login_username_hint"
                   android:inputType="textAutoComplete"
                   android:padding="20dp"
                   android:textColorHint="#cccccc" />
               <EditText
                   android:id="@+id/signinPassword"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:layout_marginTop="-2dp"
                   android:background="@drawable/edittext_bottom_bg"
                   android:hint="@string/login_password_hint"
                   android:inputType="textPassword"
                   android:padding="20dp"
                   android:textColorHint="#cccccc"/>

               <Button
                   android:id="@+id/signinBtn"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:layout_marginTop="25dp"
                   android:height="60dp"
                   android:background="@drawable/account_button"
                   android:onClick="onClick"
                   android:text="@string/log_in_btn_text"
                   android:textAllCaps="false"
                   android:textColor="@color/colorPrimaryDark"
                   android:textSize="20sp" />

           </LinearLayout>
           <TextView
               android:id="@+id/reset_password_lnk"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_below="@id/login_details_layout"
               android:layout_marginTop="30dp"
               android:gravity="center"
               android:text="Forgot Password?"
               android:textColor="#fff"
               android:textSize="18sp"
               android:clickable="true"
               />

           <Button
               android:id="@+id/navigateToSignUpBtn"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_alignParentLeft="true"
               android:layout_alignParentStart="true"
               android:layout_below="@+id/reset_password_lnk"
               android:layout_gravity="start"
               android:layout_marginBottom="20dp"
               android:layout_marginLeft="16dp"
               android:layout_marginRight="16dp"
               android:layout_marginTop="20dp"
               android:height="60dp"
               android:background="@drawable/bottom_button"
               android:drawableEnd="@drawable/ic_chevron_right"
               android:drawableRight="@drawable/ic_chevron_right"
               android:onClick="onClick"
               android:paddingLeft="20dp"
               android:paddingRight="20dp"
               android:text="@string/navigate_to_signup_text"
               android:textAlignment="textStart"
               android:textAllCaps="false"
               android:textColor="@color/white"
               android:textSize="20sp"/>
       </RelativeLayout>


   </ScrollView>


</RelativeLayout>